--- a/index.html
+++ b/index.html
@@ -3,39 +3,64 @@
   padding-top: 80px;
   text-align: center;
   font-family: monaco, monospace;
-  background-color: black;
   background-size: cover;
+  background:gray
 }
 h1, h2 {
   display: inline-block;
   background: #fff;
 }
 h1 {
-  font-size: 30
+  font-size: 40px
 }
 h2 {
-  font-size: 25x;
+  font-size: 20px;
 }
-span {
-  background: #fd0;
+#content {
+  background-color:red;
 }
-a {
-  color: yellow;
-  }
+#nav {
+  background-color:purple;
+  text-align:left;
+ }
+#main {
+  text-align: right;
+}
 p{
-  color: white
+  color:blue;
 }
+
 </style>
 <html>
-<head>
-<title> Lilly's Practice Page</title>
-</head>
-  <body> 
-  <h1> This is Lilly's practice page</h1>
-<h2> I'm learning to build my own website</h2> 
-<p> I'm going to include some text, a hyperlink, and an image</p>
-<p><a href=http://colorcodewi.com> Here's a link to colorcodeed's website.</a></p>
-<img src="http://www.uww.edu/assets/images/admissions/headers/campus-tour.jpg" hight="20%">
-</p>
+  <head>
+    <title> My Website</title>
+  </head>
+  
+  <body>
+    <div id-"container"> </div>
+        <div id="header"></div>
+        <h1> My Website</h1>
+  
+    <div id="content">
+      <div id="nav"> 
+      <h3> Navigation
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+      </h3>
+      </div>
+      <div id="main">
+      <h2>Home Page</h2>
+      <p>Enter the content of paragraph 1 here……………………………….</p>
+      <img src="http://www.uww.edu/assets/images/admissions/headers/campus-tour.jpg" height="20%">
+      <p>Enter the content of paragraph 2 here……………………………….</p>
+      <p><a href=http://www.uww.edu>Click Here</a></p>
+      <p> Enter the content of paragraph 3 here……………………………….</p>
+    </div>
+   
+    <div id="footer"></div>
+    </div>
   </body>
 </html>
